# LexBel

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py  test_rag_pipeline.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy.yml
.streamlit/: config.toml
data/vector_store/: config.json  index.faiss  metadata.pkl
scripts/: ingest.py
src/analytics/: __init__.py  metrics.py
src/chains/: __init__.py  conversational_qa.py  langchain_qa.py  llamaindex_qa.py
src/chunking/: __init__.py  chunker.py
src/embeddings/: __init__.py  base.py  cloud_embedder.py  local_embedder.py
src/llm/: __init__.py  adapters.py
src/observability/: __init__.py  analytics.py  cost_tracker.py  langfuse_client.py
src/retrievers/: __init__.py  hybrid.py  mmr.py
src/ui/: __init__.py  components.py  dashboard.py  langfuse_dashboard.py  query_handlers.py  session.py  styling.py
src/utils/: __init__.py  helpers.py  logging_config.py  models.py  types.py
src/vector_store/: __init__.py  faiss_store.py
tests/: conftest.py  test_chunking.py  test_embeddings.py  test_mmr.py  test_vector_store.py
