[project]
name = "legal_rag_be"
version = "0.1.0"
description = "RAG system applied on part of the belgian legal code"
readme = "README.md"
authors = [
    { name = "Patrick Miroglio" }
]
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.25",
    "sentence-transformers>=2.2",
    "faiss-cpu>=1.7.4",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-mistralai>=0.2.0",
    "mistralai>=1.0.0",
    "llama-index>=0.9.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "nltk>=3.8.0",
    "spacy>=3.7.0",
    "tiktoken>=0.5.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
    "plotly>=5.17.0",
    "langfuse>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-xdist",
    "ruff",
    "mypy",
    "typeguard",
    "pre-commit",
    "commitizen",
    "ipykernel",
    "ipython",
    "pdoc",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true

[tool.mypy]
junit_xml = "reports/mypy.xml"
strict = true
disallow_subclassing_any = false
disallow_untyped_decorators = false
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unreachable = true

[tool.ruff]
fix = true
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
markers = [
    "cloud: marks tests that require cloud API access (deselect with '-m \"not cloud\"')",
]

[tool.bandit]
